src/styles/global.css
@import "tailwindcss" source("../");

@import "../foundations/setup/globals-data-attr.css";

@import "./markdown.css";

@font-face {
  font-family: "Inter";
  src: url("/fonts/InterVariable.woff2") format("woff2");
  font-weight: 100 900;
}

@font-face {
  font-family: "Geist Mono";
  src: url("/fonts/GeistMonoVariable.woff2") format("woff2");
  font-weight: 100 900;
}

@theme {
  --font-sans:
    "Inter", ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  --font-mono: "Geist Mono", ui-monospace, monospace;
}

@layer base {
  *,
  ::after,
  ::before,
  ::backdrop,
  ::file-selector-button {
    border-color: var(--color-border, currentColor);
  }

  html {
    /* scroll-padding-top for sticky header */
    @apply scroll-pt-16 motion-safe:scroll-smooth md:scroll-pt-20;
  }

  html,
  body {
    height: 100%;
  }
}

